kustomize/nexus/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus-repo
  template:
    metadata:
      labels:
        app: nexus-repo
    spec:
      priorityClassName: high-priority
      containers:
        - name: nexus-repo
          image: IMAGE_NAME # Replace with the actual image name
          ports:
            - name: http
              containerPort: 8081
          startupProbe:
            tcpSocket:
              port: 8081
            periodSeconds: 10
            failureThreshold: 60
          readinessProbe:
            tcpSocket:
              port: 8081
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 8081
            periodSeconds: 20
            failureThreshold: 6
          resources:
            requests:
              cpu: 2
              memory: 4Gi
            limits:
              cpu: "4"
              memory: 6Gi
