kustomize/nexus/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-repo
spec:
  selector:
    app: nexus-repo
  ports:
    - name: http
      port: 80
      targetPort: http
