kustomize/nexus/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nexus-repo
spec:
  parentRefs:
    - name: local-gateway
      namespace: gateway-infra
  hostnames:
    - "nexus.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v2
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /repository/kubelab/v2
      backendRefs:
        - name: nexus-repo
          port: 80
